--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="index.html"><img id="Logo" src="./images/logo.png" alt="My Logo" height="60" width="240"></a>
         <header>
             <ul>
-               <li><a href="profile.html">Profile</a></li>
+               <li><a href=#>Profile</a></li>
                <li><a href=#>Education</a></li>
                <li><a href=#>Interests</a></li>
             </ul>
