#2 The first sub page has been completed - profile page

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
         <a href="index.html"><img id="Logo" src="./images/logo.png" alt="My Logo" height="60" width="240"></a>
         <header>
             <ul>
-               <li><a href=#>Profile</a></li>
+               <li><a href="profile.html">Profile</a></li>
                <li><a href=#>Education</a></li>
                <li><a href=#>Interests</a></li>
             </ul>
         </header>
       </div>
       <img id="mainpic" src="./images/Mypicture.jpg" alt="portrait">
-      <p id="mainline">Hi, I am Jina.<br><span id="small">a Computer Science Student, and a Passionate sloth.</span></p>
-    
+      <div id="hero">
+        <p id="mainline">Hi, I am Jina.<br><span id="small">a Computer Science Student, and a Passionate sloth.</span></p>
+      </div>
       <div id="ornam">&nbsp;</div>
       <p>&nbsp;</p>
       <div id="find">
