#3 The second sub page has been completed - education page

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <header>
             <ul>
                <li><a href="profile.html">Profile</a></li>
-               <li><a href=#>Education</a></li>
+               <li><a href="education.html">Education</a></li>
                <li><a href=#>Interests</a></li>
             </ul>
         </header>
       </div>
       <img id="mainpic" src="./images/Mypicture.jpg" alt="portrait">
       <div id="hero">
-        <p id="mainline">Hi, I am Jina.<br><span id="small">a Computer Science Student, and a Passionate sloth.</span></p>
+        <p id="mainline">Hi, I am Jina.<br><span id="small">a Passionate Life Long Learner,<br> and a Fast Sloth.</span></p>
       </div>
       <div id="ornam">&nbsp;</div>
       <p>&nbsp;</p>
       <div id="find">
-          <h1>A little bit more about me...</h1>
+          <h1>A little bit more about me...(Overview)</h1>
           
       </div>
       <div class="ourstore">
