--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="profile.css">
         <meta charset= "UTF-8">
         <title>Profile</title>
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     </head>
     <body>
         <div id="wrapper">
@@ -12,7 +13,7 @@
              <header>
                     <ul>
                        <li><a href="./profile.html">Profile</a></li>
-                       <li><a href=#>Education</a></li>
+                       <li><a href="./education.html">Education</a></li>
                        <li><a href=#>Interests</a></li>
                        
                     </ul>
