#3 The third sub page has been completed - passions page

--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="education.css">
+        <link rel="stylesheet" type="text/css" href="passion.css">
         <meta charset= "UTF-8">
         <title>Education</title>
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
@@ -14,7 +14,7 @@
                     <ul>
                        <li><a href="profile.html">Profile</a></li>
                        <li><a href="education.html">Education</a></li>
-                       <li><a href="#">Interests</a></li>
+                       <li><a href="passion.html">Passions</a></li>
                     </ul>
                   </header>
 
