--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                <li><a href="profile.html">Profile</a></li>
                <li><a href="education.html">Education</a></li>
-               <li><a href=#>Interests</a></li>
+               <li><a href="passion.html">Passions</a></li>
             </ul>
         </header>
       </div>
