--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
                     <ul>
                        <li><a href="./profile.html">Profile</a></li>
                        <li><a href="./education.html">Education</a></li>
-                       <li><a href=#>Interests</a></li>
+                       <li><a href="./passion.html">Passions</a></li>
                        
                     </ul>
              </header>
@@ -27,7 +27,10 @@
                 <p>Since I was little, I have been curious about the world.<br><br>I have explored, traveled, and discovered <br>many things in this world.<br><br>
                     I haved always follwed and pursued my heart and passion.<br><br> My life stories prove the invaluable life <br>experience I have gained through the principle. <br><br>
                     Now here I am living in Vancouver studying Computer Science and graduating soon from Langara College. <br><br>
-                    Can't wait to see what the future holds for me! <br>
+                    Can't wait to see what the future holds for me! <br><br>
+
+                    Let's connect! <a href="https://www.linkedin.com/in/jina-pak-6697291bb/" target="_blank"><img src="images/linkedin.png" width="30" height="30"></a>
+
                 </p>
                 <img src="./images/path.jpg" alt="a path in the garden" height="500" width="400">
             </div>
