#4 is completed - Readme file has information about the project now

--- a/passion.html
+++ b/passion.html
@@ -50,7 +50,7 @@
                 <div class="bearmenu">
                     <img id="_5th" src="./images/chickenstrips.jpg" alt="chickenstrips" width="400" height="400">
                     <p>Chicken Strips</p>
-                    <p><span>My favorite go-to snack <a href="https://www.ihop.com/en" target="_blank">(IHOP)</a></span><br><br> : Most of time, I order either waffles or pancakes with this </p>
+                    <p><span>My favorite go-to snack <a href="https://www.ihop.com/en" target="_blank">(IHOP)</a></span><br><br> : Most of time, I order either waffles or pancakes with this. </p>
                 </div>
             </div>
         
@@ -58,7 +58,7 @@
                 <ul>
                     <li><a href=#></a>Privacy Policy</a></li>
                     <li><a href=#></a>Contact</a></li>
-                    <li><a href=#></a>&copy;2021 LionBear Co.</a></li>
+                    <li><a href=#></a>&copy;2024 Jina Pak</a></li>
                 </ul>
             </footer>
             
