#5 Requirement check - all completed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
              -Regular gatherings<br>
              -Cultural events<br>
             <br><br><br>
-             <span>안녕하세요!</span></p>
+             <span>안녕하세요!(Hello!)</span></p>
       </div>
       <div class="ourstore">
           <p><span>2023 Langara Hacks Hackathon Task Force Committee @ Langar Computer Science Club (LCSC)</span><br><br><br>
