#1 Update index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           
       </div>
       <div class="ourstore">
-          <img id="exterior" src="./images/squaredKSA.png" alt="Exterior of LionBear" width="400" height="600">
+          <img id="exterior" src="./images/squaredKSA.png" alt="KSA logo" width="200" height="250">
           <p><span>2024 Spring International Student Club Award Recipient @ Langara College</span><br><br><br>
              I am a founder and president of Korean Student Association (KSA) at Langara College.
              <br>My executive team and I contributed to foster multiculturalism to Langara College.<br><br>
